syntax = "proto3";

package ad;
option go_package = "lesson9/homework/internal/ports/grpcPort";
import "google/protobuf/timestamp.proto";

service AdService {
  rpc CreateAd(CreateAdRequest) returns (AdResponse) {}
  rpc ChangeAdStatus(ChangeAdStatusRequest) returns (AdResponse) {}
  rpc UpdateAd(UpdateAdRequest) returns (AdResponse) {}
  rpc GetAd (GetAdRequest) returns (AdResponse) {}
  rpc DeleteAd(DeleteAdRequest) returns (AdResponse) {}
  rpc ListAds(ListAdRequest) returns (ListAdResponse) {}
  rpc AdsByTitle(AdsByTitleRequest) returns (ListAdResponse) {}

  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc ChangeUser(ChangeUserRequest) returns (UserResponse){}
  rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {}
}

message CreateAdRequest {
  string title = 1;
  string text = 2;
  int64 user_id = 3;
}

message AdResponse {
  int64 id = 1;
  string title = 2;
  string text = 3;
  int64 author_id = 4;
  bool published = 5;

  google.protobuf.Timestamp creation_time = 6;
  google.protobuf.Timestamp update_time = 7;
}

message ChangeAdStatusRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
  bool published = 3;
}

message UpdateAdRequest {
  int64 ad_id = 1;
  string title = 2;
  string text = 3;
  int64 user_id = 4;
}

message GetAdRequest{
  int64 ad_id = 1;
  int64 user_id = 2;
}

message DeleteAdRequest {
  int64 ad_id = 1;
  int64 user_id = 2;
}

message ListAdRequest{
  optional int64 user_id = 1;
  optional google.protobuf.Timestamp time = 2;
}

message AdsByTitleRequest{
  string title = 1;
}

message ListAdResponse {
  repeated AdResponse list = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UserResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message ChangeUserRequest{
  int64 id = 1;
  optional string nickname = 2;
  optional string email = 3;
}

message GetUserRequest {
  int64 id = 1;
}

message DeleteUserRequest {
  int64 id = 1;
}
